# sonar-sdk

./: README.md  display_response.py  env.sh  main.py  prompt.txt  pyproject.toml  sonar.py  sonar_request.py
responses/: 20250225_161024_sonar.txt
sonar_sdk/: __init__.py  cli.py  client.py  display_response.py  sonar_request.py
